--- a/Pages/PPFindex.html
+++ b/Pages/PPFindex.html
@@ -277,11 +277,12 @@
               </div>
               <div class="cta-links">
                   <a href="../index.html">Calculator Page</a>
-                  <a href="../Pages/cagrIndex.html">EMI Calculator</a>
-                  <a href="../Pages/emiIndex.html">Gratuity Calculator</a>
-                  <a href="../Pages/gratuityIndex.html">Home Loan EMI Calculator</a>
-                  <a href="../Pages/homeEMIindex.html">HRA Calculator</a>
-                  <a href="../Pages/HRAindex.html">PPF Calculator</a>
+                  <a href="../Pages/cagrIndex.html">CAGR Calculator</a>
+                  <a href="../Pages/emiIndex.html">EMI Calculator</a>
+                  <a href="../Pages/gratuityIndex.html">Gratuity Calculator</a>
+                  <a href="../Pages/homeEMIindex.html">Home Loan EMI Calculator</a>
+                  <a href="../Pages/HRAindex.html">HRA Calculator</a>
+                  <a href="../Pages/PPFindex.html">PPF Calculator</a>
               </div>
           </aside>
 
