--- a/Pages/emiIndex.html
+++ b/Pages/emiIndex.html
@@ -41,13 +41,27 @@
                         </div>
                         
                 </form>
-                
                 <div class="result-section">
-                    <h2 style="color:#d31f26;">Results</h2>
-                    <div class="calculated-result">
-                        <p id="result"></p>
+                    <!-- Title: Your Monthly EMI -->
+                    <h3 class="result-title">Your Monthly EMI is: <span id="emiValue">₹0</span></h3>
+
+                    <!-- Horizontal Line -->
+                    <hr class="divider">
+
+                    <!-- Principal Amount & Total Interest Section -->
+                    <div class="value-details">
+                        <div class="left">
+                            <p><strong>Principal Amount:</strong></br> <span id="displayPrincipalAmount">0</span></p>
+                        </div>
+                        <div class="center">
+                            <br><strong>Total Interest:</strong> </br><span id="displayTotalInterest">0</span></p>
+                        </div>
+                        <div class="right">
+                            <p><strong>Total Amount:</strong></br> <span id="displayTotalAmount">0</span></p>
+                        </div>
                     </div>
                 </div>
+
                 <section class="description-section">
                     <h3>Description</h3>
                     <p>
@@ -142,12 +156,13 @@
                     <img src="../assets/img/calculator image.jpg" alt="Image Banner for CTA">
                 </div>
                 <div class="cta-links">
-                    <a href="../index.html">Calculator Page</a> 
-                    <a href="../Pages/cagrIndex.html">CAGR Calculator</a>
-                    <a href="../Pages/gratuityIndex.html">Gratuity Calculator</a>
-                    <a href="../Pages/homeEMIindex.html">Home Loan EMI Calculator</a>
-                    <a href="../Pages/HRAindex.html">HRA Calculator</a>
-                    <a href="../Pages/PPFindex.html">PPF Calculator</a>
+                  <a href="../index.html">Calculator Page</a>
+                  <a href="../Pages/cagrIndex.html">CAGR Calculator</a>
+                  <a href="../Pages/emiIndex.html">EMI Calculator</a>
+                  <a href="../Pages/gratuityIndex.html">Gratuity Calculator</a>
+                  <a href="../Pages/homeEMIindex.html">Home Loan EMI Calculator</a>
+                  <a href="../Pages/HRAindex.html">HRA Calculator</a>
+                  <a href="../Pages/PPFindex.html">PPF Calculator</a>
                 </div>
             </aside>
         </div>
