--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Calculator Page</title>
     <link rel="stylesheet" href="assets\styles.css">
     <script defer src="assets/script.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
 </head>
 <body>
     <header>
@@ -29,32 +31,65 @@
     <section class="calculators">
         <h2>Calculators</h2>
         <div class="calculator-grid">
+            <!-- CAGR Calculator -->
             <a href="Pages/cagrIndex.html" class="calculator-box">
-                <h3>CAGR Calculator</h3>
-                <p>Estimate your returns on a Public Provident Fund account.</p>
+                <div class="calculator-content">
+                    <i class="fas fa-hand-holding-usd"></i>
+                    <h3 class="calculator-title">CAGR Calculator</h3>
+                </div>
+                <p class="calculator-description">Estimate your returns on a Public Provident Fund account.</p>
+                <span class="calculate-now">Calculate Now →</span>
             </a>
+
+            <!-- EMI Calculator -->
             <a href="Pages/emiIndex.html" class="calculator-box">
-                <h3>EMI Calculator</h3>
-                <p>Calculate your Equated Monthly Installments for any loan.</p>
+                <div class="calculator-content">
+                    <i class="fas fa-hand-holding-usd"></i>
+                    <h3 class="calculator-title">EMI Calculator</h3>
+                </div>
+                <p class="calculator-description">Calculate your Equated Monthly Installments for any loan.</p>
+                <span class="calculate-now">Calculate Now →</span>
             </a>
+
+            <!-- Gratuity Calculator -->
             <a href="Pages/gratuityIndex.html" class="calculator-box">
-                <h3>Gratuity Calculator</h3>
-                <p>Find out your gratuity amount based on tenure and salary.</p>
+                <div class="calculator-content">
+                    <i class="fas fa-hand-holding-usd"></i>
+                    <h3 class="calculator-title">Gratuity Calculator</h3>
+                </div>
+                <p class="calculator-description">Find out your gratuity amount based on tenure and salary.</p>
+                <span class="calculate-now">Calculate Now →</span>
             </a>
+
+            <!-- Home Loan EMI Calculator -->
             <a href="Pages/homeEMIindex.html" class="calculator-box">
-                <h3>Home Loan EMI Calculator</h3>
-                <p>Plan your monthly payments for a home loan effectively.</p>
+                <div class="calculator-content">
+                    <i class="fas fa-hand-holding-usd"></i>
+                    <h3 class="calculator-title">Home Loan EMI Calculator</h3>
+                </div>
+                <p class="calculator-description">Plan your monthly payments for a home loan effectively.</p>
+                <span class="calculate-now">Calculate Now →</span>
             </a>
+
+            <!-- HRA Calculator -->
             <a href="Pages/HRAindex.html" class="calculator-box">
-                <h3>HRA Calculator</h3>
-                <p>Calculate your House Rent Allowance exemption for tax savings.</p>
+                <div class="calculator-content">
+                    <i class="fas fa-hand-holding-usd"></i>
+                    <h3 class="calculator-title">HRA Calculator</h3>
+                </div>
+                <p class="calculator-description">Calculate your House Rent Allowance exemption for tax savings.</p>
+                <span class="calculate-now">Calculate Now →</span>
             </a>
+
+            <!-- PPF Calculator -->
             <a href="Pages/PPFindex.html" class="calculator-box">
-                <h3>PPF Calculator</h3>
-                <p>Estimate your returns on a Public Provident Fund account.</p>
+                <div class="calculator-content">
+                    <i class="fas fa-hand-holding-usd"></i>
+                    <h3 class="calculator-title">PPF Calculator</h3>
+                </div>
+                <p class="calculator-description">Estimate your returns on a Public Provident Fund account.</p>
+                <span class="calculate-now">Calculate Now →</span>
             </a>
-            
-            
         </div>
     </section>
 
