--- a/Pages/HRAindex.html
+++ b/Pages/HRAindex.html
@@ -170,12 +170,13 @@
                     <img src="../assets/img/calculator image.jpg" alt="Image Banner for CTA">
                 </div>
                 <div class="cta-links">
-                    <a href="../index.html">Calculator Page</a> 
-                    <a href="../Pages/cagrIndex.html">EMI Calculator</a>
-                    <a href="../Pages/emiIndex.html">Gratuity Calculator</a>
-                    <a href="../Pages/gratuityIndex.html">Home Loan EMI Calculator</a>
-                    <a href="../Pages/homeEMIindex.html">HRA Calculator</a>
-                    <a href="../Pages/PPFindex.html">PPF Calculator</a>
+                  <a href="../index.html">Calculator Page</a>
+                  <a href="../Pages/cagrIndex.html">CAGR Calculator</a>
+                  <a href="../Pages/emiIndex.html">EMI Calculator</a>
+                  <a href="../Pages/gratuityIndex.html">Gratuity Calculator</a>
+                  <a href="../Pages/homeEMIindex.html">Home Loan EMI Calculator</a>
+                  <a href="../Pages/HRAindex.html">HRA Calculator</a>
+                  <a href="../Pages/PPFindex.html">PPF Calculator</a>
                 </div>
             </aside>
   
