Updated CSS of all pages

--- a/index.html
+++ b/index.html
@@ -1,163 +1,194 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="Ashiana Housing- Financial Planning Calculators" content="Take control of your home-buying journey with Ashiana Housing's Financial Planning Calculators. Easily calculate EMI, loan eligibility, stamp duty, and more to plan your finances effortlessly!">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="Ashiana Housing- Financial Planning Calculators"
+      content="Take control of your home-buying journey with Ashiana Housing's Financial Planning Calculators. Easily calculate EMI, loan eligibility, stamp duty, and more to plan your finances effortlessly!"
+    />
     <title>Calculator Page</title>
-    <link rel="stylesheet" href="assets\styles.css">
+    <link rel="stylesheet" href="assets\styles.css" />
     <script defer src="assets/script.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+  </head>
+  <body>
     <header>
-        <div class="header-content" style="text-decoration: none;color:inherit;">
-            <div class="logo">
-               <a href="index.html"> <!-- Replace 'index.html' with your homepage URL -->
-                <img src="assets/img/Ashiana Corporate Logo.pdf.png" alt="LOGO">
-            </a>
-           <!-- <div class="search-tab">
-                <input type="text" placeholder="Search here..." class="search-input">
-                <button class="search-button">Search</button>
-            </div>
-            <div class="login">LOGIN</div>-->
+      <div class="header-content" style="text-decoration: none; color: inherit">
+        <div class="logo">
+          <a href="index.html">
+            <img src="assets/img/Ashiana Corporate Logo.pdf.png" alt="LOGO" />
+          </a>
         </div>
+      </div>
     </header>
     <section class="hero">
-        <h1>Calculator</h1>
-        <p>Your one-stop solution for all financial calculations</p>
+      <h1>Calculator</h1>
+      <p>Your one-stop solution for all financial calculations</p>
     </section>
-
     <section class="calculators">
-        <h2>Calculators</h2>
-        <div class="calculator-grid">
-            <!-- CAGR Calculator -->
-            <a href="Pages/cagrIndex.html" class="calculator-box">
-                <div class="calculator-content">
-                    <i class="fas fa-hand-holding-usd"></i>
-                    <h3 class="calculator-title">CAGR Calculator</h3>
-                </div>
-                <p class="calculator-description">Estimate your returns on a Public Provident Fund account.</p>
-                <span class="calculate-now">Calculate Now →</span>
-            </a>
+      <h2>Calculators</h2>
+      <div class="calculator-grid">
+        <!-- CAGR Calculator -->
+        <a href="Pages/cagrIndex.html" class="calculator-box">
+          <div class="calculator-content">
+            <i class="fas fa-hand-holding-usd"></i>
+            <h3 class="calculator-title">CAGR Calculator</h3>
+          </div>
+          <p class="calculator-description">
+            Estimate your returns on a Public Provident Fund account.
+          </p>
+          <span class="calculate-now">Calculate Now →</span>
+        </a>
 
-            <!-- EMI Calculator -->
-            <a href="Pages/emiIndex.html" class="calculator-box">
-                <div class="calculator-content">
-                    <i class="fas fa-hand-holding-usd"></i>
-                    <h3 class="calculator-title">EMI Calculator</h3>
-                </div>
-                <p class="calculator-description">Calculate your Equated Monthly Installments for any loan.</p>
-                <span class="calculate-now">Calculate Now →</span>
-            </a>
+        <!-- EMI Calculator -->
+        <a href="Pages/emiIndex.html" class="calculator-box">
+          <div class="calculator-content">
+            <i class="fas fa-hand-holding-usd"></i>
+            <h3 class="calculator-title">EMI Calculator</h3>
+          </div>
+          <p class="calculator-description">
+            Calculate your Equated Monthly Installments for any loan.
+          </p>
+          <span class="calculate-now">Calculate Now →</span>
+        </a>
 
-            <!-- Gratuity Calculator -->
-            <a href="Pages/gratuityIndex.html" class="calculator-box">
-                <div class="calculator-content">
-                    <i class="fas fa-hand-holding-usd"></i>
-                    <h3 class="calculator-title">Gratuity Calculator</h3>
-                </div>
-                <p class="calculator-description">Find out your gratuity amount based on tenure and salary.</p>
-                <span class="calculate-now">Calculate Now →</span>
-            </a>
+        <!-- Gratuity Calculator -->
+        <a href="Pages/gratuityIndex.html" class="calculator-box">
+          <div class="calculator-content">
+            <i class="fas fa-hand-holding-usd"></i>
+            <h3 class="calculator-title">Gratuity Calculator</h3>
+          </div>
+          <p class="calculator-description">
+            Find out your gratuity amount based on tenure and salary.
+          </p>
+          <span class="calculate-now">Calculate Now →</span>
+        </a>
 
-            <!-- Home Loan EMI Calculator -->
-            <a href="Pages/homeEMIindex.html" class="calculator-box">
-                <div class="calculator-content">
-                    <i class="fas fa-hand-holding-usd"></i>
-                    <h3 class="calculator-title">Home Loan EMI Calculator</h3>
-                </div>
-                <p class="calculator-description">Plan your monthly payments for a home loan effectively.</p>
-                <span class="calculate-now">Calculate Now →</span>
-            </a>
+        <!-- Home Loan EMI Calculator -->
+        <a href="Pages/homeEMIindex.html" class="calculator-box">
+          <div class="calculator-content">
+            <i class="fas fa-hand-holding-usd"></i>
+            <h3 class="calculator-title">Home Loan EMI Calculator</h3>
+          </div>
+          <p class="calculator-description">
+            Plan your monthly payments for a home loan effectively.
+          </p>
+          <span class="calculate-now">Calculate Now →</span>
+        </a>
 
-            <!-- HRA Calculator -->
-            <a href="Pages/HRAindex.html" class="calculator-box">
-                <div class="calculator-content">
-                    <i class="fas fa-hand-holding-usd"></i>
-                    <h3 class="calculator-title">HRA Calculator</h3>
-                </div>
-                <p class="calculator-description">Calculate your House Rent Allowance exemption for tax savings.</p>
-                <span class="calculate-now">Calculate Now →</span>
-            </a>
+        <!-- HRA Calculator -->
+        <a href="Pages/HRAindex.html" class="calculator-box">
+          <div class="calculator-content">
+            <i class="fas fa-hand-holding-usd"></i>
+            <h3 class="calculator-title">HRA Calculator</h3>
+          </div>
+          <p class="calculator-description">
+            Calculate your House Rent Allowance exemption for tax savings.
+          </p>
+          <span class="calculate-now">Calculate Now →</span>
+        </a>
 
-            <!-- PPF Calculator -->
-            <a href="Pages/PPFindex.html" class="calculator-box">
-                <div class="calculator-content">
-                    <i class="fas fa-hand-holding-usd"></i>
-                    <h3 class="calculator-title">PPF Calculator</h3>
-                </div>
-                <p class="calculator-description">Estimate your returns on a Public Provident Fund account.</p>
-                <span class="calculate-now">Calculate Now →</span>
-            </a>
-        </div>
+        <!-- PPF Calculator -->
+        <a href="Pages/PPFindex.html" class="calculator-box">
+          <div class="calculator-content">
+            <i class="fas fa-hand-holding-usd"></i>
+            <h3 class="calculator-title">PPF Calculator</h3>
+          </div>
+          <p class="calculator-description">
+            Estimate your returns on a Public Provident Fund account.
+          </p>
+          <span class="calculate-now">Calculate Now →</span>
+        </a>
+      </div>
     </section>
 
     <section class="faq-section">
-            <h1 style="text-align: center;">Frequently Asked Questions</h1>
-            <div class="faq-item">
-                <div class="faq-question">
-                    <h3>What is a senior living home?</h3>
-                    <span class="faq-toggle">+</span>
-                </div>
-                <div class="faq-answer">
-                    <p>Senior Living Homes or retirement homes are independent homes for seniors who want to lead a dignified life after retirement. These homes are designed with age-specific amenities.</p>
-                </div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-question">
-                    <h3>How is senior living different from an old age home?</h3>
-                    <span class="faq-toggle">+</span>
-                </div>
-                <div class="faq-answer">
-                    <p>Senior living homes are designed for independent living, whereas old age homes are often institutional facilities providing basic care for the elderly.</p>
-                </div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-question">
-                    <h3>What is the difference between a premium home and a senior living project?</h3>
-                    <span class="faq-toggle">+</span>
-                </div>
-                <div class="faq-answer">
-                    <p>Premium homes cater to luxury needs, while senior living projects focus on providing a safe and supportive environment with amenities for seniors.</p>
-                </div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-question">
-                    <h3>What kind of medical assistance is available in Ashiana Senior Living?</h3>
-                    <span class="faq-toggle">+</span>
-                </div>
-                <div class="faq-answer">
-                    <p>Ashiana Senior Living provides on-call medical assistance, tie-ups with nearby hospitals, and 24/7 emergency services.</p>
-                </div>
-            </div>
+      <h1 style="text-align: center">Frequently Asked Questions</h1>
+      <div class="faq-item">
+        <div class="faq-question">
+          <h3>What is a senior living home?</h3>
+          <span class="faq-toggle">+</span>
         </div>
+        <div class="faq-answer">
+          <p>
+            Senior Living Homes or retirement homes are independent homes for
+            seniors who want to lead a dignified life after retirement. These
+            homes are designed with age-specific amenities.
+          </p>
+        </div>
+      </div>
+      <div class="faq-item">
+        <div class="faq-question">
+          <h3>How is senior living different from an old age home?</h3>
+          <span class="faq-toggle">+</span>
+        </div>
+        <div class="faq-answer">
+          <p>
+            Senior living homes are designed for independent living, whereas old
+            age homes are often institutional facilities providing basic care
+            for the elderly.
+          </p>
+        </div>
+      </div>
+      <div class="faq-item">
+        <div class="faq-question">
+          <h3>
+            What is the difference between a premium home and a senior living
+            project?
+          </h3>
+          <span class="faq-toggle">+</span>
+        </div>
+        <div class="faq-answer">
+          <p>
+            Premium homes cater to luxury needs, while senior living projects
+            focus on providing a safe and supportive environment with amenities
+            for seniors.
+          </p>
+        </div>
+      </div>
+      <div class="faq-item">
+        <div class="faq-question">
+          <h3>
+            What kind of medical assistance is available in Ashiana Senior
+            Living?
+          </h3>
+          <span class="faq-toggle">+</span>
+        </div>
+        <div class="faq-answer">
+          <p>
+            Ashiana Senior Living provides on-call medical assistance, tie-ups
+            with nearby hospitals, and 24/7 emergency services.
+          </p>
+        </div>
+      </div>
     </section>
 
-
     <section class="blogs">
-        <h2>Blogs</h2>
-        <div class="blog-carousel">
-            <div class="blog-card">
-                <img src="placeholder.png" alt="Blog Image">
-                <h3>How to Save Effectively?</h3>
-                <a href="#">Read More</a>
-            </div>
-            <div class="blog-card">
-                <img src="placeholder.png" alt="Blog Image">
-                <h3>Maximizing PPF Returns</h3>
-                <a href="#">Read More</a>
-            </div>
-            <div class="blog-card">
-                <img src="placeholder.png" alt="Blog Image">
-                <h3>Top Tax Saving Tips</h3>
-                <a href="#">Read More</a>
-            </div>
+      <h2>Blogs</h2>
+      <div class="blog-carousel">
+        <div class="blog-card">
+          <img src="placeholder.png" alt="Blog Image" />
+          <h3>How to Save Effectively?</h3>
+          <a href="#">Read More</a>
         </div>
+        <div class="blog-card">
+          <img src="placeholder.png" alt="Blog Image" />
+          <h3>Maximizing PPF Returns</h3>
+          <a href="#">Read More</a>
+        </div>
+        <div class="blog-card">
+          <img src="placeholder.png" alt="Blog Image" />
+          <h3>Top Tax Saving Tips</h3>
+          <a href="#">Read More</a>
+        </div>
+      </div>
     </section>
 
     <footer>
-        <p>Footer</p>
+      <p>Footer</p>
     </footer>
-</body>
+  </body>
 </html>
