add sidebar image

--- a/Pages/HRAindex.html
+++ b/Pages/HRAindex.html
@@ -378,7 +378,7 @@
         <aside class="right-section">
           <div class="image-banner">
             <img
-              src="../assets/img/calculator image.jpg"
+              src="../assets/img/side_bar_image.jpg"
               alt="Image Banner for CTA"
             />
           </div>
@@ -441,7 +441,7 @@
       <h2>Blogs</h2>
       <div class="blog-carousel">
         <div class="blog-card">
-          <img src="../calculator image.jpg" alt="Blog Image" />
+          <img src="../side_bar_image.jpg" alt="Blog Image" />
           <h3>How to Save Effectively?</h3>
           <a href="#">Read More</a>
         </div>
