--- a/Pages/homeEMIindex.html
+++ b/Pages/homeEMIindex.html
@@ -352,7 +352,7 @@
         <aside class="right-section">
           <div class="image-banner">
             <img
-              src="../assets/img/calculator image.jpg"
+              src="../assets/img/side_bar_image.jpg"
               alt="Image Banner for CTA"
             />
           </div>
