--- a/Pages/gratuityIndex.html
+++ b/Pages/gratuityIndex.html
@@ -308,14 +308,14 @@
             />
           </div>
           <div class="cta-links">
-            <a href="../index.html" style="margin-top: 20px">Calculator Page</a>
+            <h3>Quick Links</h3>
+            <a href="../index.html" >Calculator Page</a>
             <a href="../Pages/cagrIndex.html">CAGR Calculator</a>
             <a href="../Pages/emiIndex.html">EMI Calculator</a>
             <a href="../Pages/gratuityIndex.html">Gratuity Calculator</a>
             <a href="../Pages/homeEMIindex.html">Home Loan EMI Calculator</a>
             <a href="../Pages/HRAindex.html">HRA Calculator</a>
-            <a href="../Pages/PPFindex.html" style="margin-bottom: 20px"
-              >PPF Calculator</a
+            <a href="../Pages/PPFindex.html">PPF Calculator</a
             >
           </div>
         </aside>
