--- a/Pages/emiIndex.html
+++ b/Pages/emiIndex.html
@@ -30,72 +30,33 @@
         <section class="left-section">
           <div class="calculator-section">
             <form id="emiForm">
-              <div class="input-field">
-                <label for="loan">Loan Amount (₹):</label>
-                <input
-                  type="number"
-                  id="loan"
-                  placeholder="Enter Loan Amount"
-                  min="100000"
-                  value="100000"
-                  required
-                  oninput="syncInput('loan', 'loanRange')"
-                />
-                <input
-                  type="range"
-                  id="loanRange"
-                  min="1000"
-                  max="1000000"
-                  step="1000"
-                  value="100000"
-                  oninput="syncInput('loanRange','loan')"
-                />
-              </div>
-              <div class="input-field">
-                <label for="interestRate">Interest Rate (%):</label>
-                <input
-                  type="number"
-                  id="interestRate"
-                  placeholder="Enter Interest Rate"
-                  min="1"
-                  max="100"
-                  value="6.5"
-                  required
-                  oninput="syncInput('interestRate', 'interestRateRange')"
-                />
-                <input
-                  type="range"
-                  id="interestRateRange"
-                  min="1"
-                  max="100"
-                  step="0.1"
-                  value="6.5"
-                  oninput="syncInput('interestRateRange','interestRate')"
-                />
-              </div>
-              <div class="input-field">
-                <label for="tenure">Tenure (Years):</label>
-                <input
-                  type="number"
-                  id="tenure"
-                  placeholder="Enter Tenure"
-                  min="1"
-                  max="30"
-                  value="5"
-                  required
-                  oninput="syncInput('tenure', 'tenureRange')"
-                />
-                <input
-                  type="range"
-                  id="tenureRange"
-                  min="1"
-                  max="30"
-                  step="1"
-                  value="5"
-                  oninput="syncInput('tenureRange','tenure')"
-                />
-              </div>
-              <!-- </div> -->
+                <div class="tab-container">
+                  <input type="radio" id="car-loan" name="loan-type" value="car" checked>
+                    <label for="car-loan" class="tab-label">Car Loan</label>
+                  <input type="radio" id="bike-loan" name="loan-type" value="bike">
+                    <label for="bike-loan" class="tab-label">Bike Loan</label>
+                  <input type="radio" id="personal-loan" name="loan-type" value="personal">
+                    <label for="personal-loan" class="tab-label">Personal Loan</label>
+                  <input type="radio" id="consumer-loan" name="loan-type" value="consumer">
+                    <label for="consumer-loan" class="tab-label">Consumer Loan</label>  
+                </div>
+                <div class="input-field">
+                    <label for="loan">Loan Amount (₹):</label>
+                    <input type="number" id="loan" min="1000" value="100000" required>
+                    <input type="range" id="loanRange" min="1000" max="1000000" step="1000" value="100000">
+                </div>
+
+                <div class="input-field">
+                    <label for="interestRate">Interest Rate (%):</label>
+                    <input type="number" id="interestRate" min="1" max="100" value="6.5" required>
+                    <input type="range" id="interestRateRange" min="1" max="100" step="0.1" value="6.5">
+                </div>
+
+                <div class="input-field">
+                    <label for="tenure">Tenure (Years):</label>
+                    <input type="number" id="tenure" min="1" max="30" value="5" required>
+                    <input type="range" id="tenureRange" min="1" max="30" step="1" value="5">
+                </div>
             </form>
           </div>
           <div class="result-section">
@@ -119,8 +80,7 @@
                 <p>
                   <strong>Total Interest:</strong> <br /><span
                     id="displayTotalInterest"
-                    >0</span
-                  >
+                    >0</span >
                 </p>
               </div>
               <div class="right">
@@ -355,14 +315,14 @@
             />
           </div>
           <div class="cta-links">
-            <a href="../index.html" style="margin-top: 20px">Calculator Page</a>
+            <h3>Quick Links</h3>
+            <a href="../index.html" >Calculator Page</a>
             <a href="../Pages/cagrIndex.html">CAGR Calculator</a>
             <a href="../Pages/emiIndex.html">EMI Calculator</a>
             <a href="../Pages/gratuityIndex.html">Gratuity Calculator</a>
             <a href="../Pages/homeEMIindex.html">Home Loan EMI Calculator</a>
             <a href="../Pages/HRAindex.html">HRA Calculator</a>
-            <a href="../Pages/PPFindex.html" style="margin-bottom: 20px"
-              >PPF Calculator</a
+            <a href="../Pages/PPFindex.html">PPF Calculator</a
             >
           </div>
         </aside>
