--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="Take control of your home-buying journey with Ashiana Housing's Financial Planning Calculators. Easily calculate EMI, loan eligibility, stamp duty, and more to plan your finances effortlessly!"
     />
     <title>Calculator Page</title>
-    <link rel="stylesheet" href="assets\styles.css" />
+    <link rel="stylesheet" href="assets/index.css" />
     <script defer src="assets/script.js"></script>
     <link
       rel="stylesheet"
