--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- CAGR Calculator -->
         <a href="Pages/cagrIndex.html" class="calculator-box">
           <div class="calculator-content">
-            <img src="assets/img/AHL- EMI Icons/1.png"></img>
+            <img src="assets/img/AHL- EMI Icons/CAGR.png"></img>
             <h3 class="calculator-title">CAGR Calculator</h3>
           </div>
           <p class="calculator-description">
@@ -46,7 +46,7 @@
         <!-- EMI Calculator -->
         <a href="Pages/emiIndex.html" class="calculator-box">
           <div class="calculator-content">
-            <img src="assets/img/AHL- EMI Icons/4.png"></img>
+            <img src="assets/img/AHL- EMI Icons/EMI.png"></img>
             <h3 class="calculator-title">EMI Calculator</h3>
           </div>
           <p class="calculator-description">
@@ -58,7 +58,7 @@
         <!-- Gratuity Calculator -->
         <a href="Pages/gratuityIndex.html" class="calculator-box">
           <div class="calculator-content">
-            <img src="assets/img/AHL- EMI Icons/6.png"></img>
+            <img src="assets/img/AHL- EMI Icons/Gratuity.png"></img>
             <h3 class="calculator-title">Gratuity Calculator</h3>
           </div>
           <p class="calculator-description">
@@ -70,7 +70,7 @@
         <!-- Home Loan EMI Calculator -->
         <a href="Pages/homeEMIindex.html" class="calculator-box">
           <div class="calculator-content">
-            <img src="assets/img/AHL- EMI Icons/5.png"></img>
+            <img src="assets/img/AHL- EMI Icons/Home EMI.png"></img>
             <h3 class="calculator-title">Home Loan EMI Calculator</h3>
           </div>
           <p class="calculator-description">
@@ -82,7 +82,7 @@
         <!-- HRA Calculator -->
         <a href="Pages/HRAindex.html" class="calculator-box">
           <div class="calculator-content">
-            <img src="assets/img/AHL- EMI Icons/2.png"></img>
+            <img src="assets/img/AHL- EMI Icons/HRA.png"></img>
             <h3 class="calculator-title">HRA Calculator</h3>
           </div>
           <p class="calculator-description">
@@ -94,7 +94,7 @@
         <!-- PPF Calculator -->
         <a href="Pages/PPFindex.html" class="calculator-box">
           <div class="calculator-content">
-            <img src="assets/img/AHL- EMI Icons/3.png"></img>
+            <img src="assets/img/AHL- EMI Icons/PPF.png"></img>
             <h3 class="calculator-title">PPF Calculator</h3>
           </div>
           <p class="calculator-description">
