--- a/Pages/HRAindex.html
+++ b/Pages/HRAindex.html
@@ -457,7 +457,7 @@
       </div>
     </section>
     <footer>
-      <p>Footer Content</p>
+      <!-- <p>Footer Content</p> -->
     </footer>
     <script src="../assets/HRAscript.js"></script>
   </body>
