--- a/Pages/PPFindex.html
+++ b/Pages/PPFindex.html
@@ -651,7 +651,7 @@
     </section>
 
     <footer>
-      <p>Footer Content</p>
+      <!-- <p>Footer Content</p> -->
     </footer>
 
     <script src="../assets/PPFscript.js"></script>
