--- a/Pages/cagrIndex.html
+++ b/Pages/cagrIndex.html
@@ -387,7 +387,7 @@
 
 
     <footer>
-      <p>Footer Content</p>
+      <!-- <p>Footer Content</p> -->
     </footer>
     <script src="../assets/cagrScript.js"></script>
   </body>
