--- a/Pages/emiIndex.html
+++ b/Pages/emiIndex.html
@@ -470,7 +470,7 @@
       </div>
     </section>
     <footer>
-      <p>Footer Content</p>
+      <!-- <p>Footer Content</p> -->
     </footer>
     <script src="../assets/emiScript.js"></script>
   </body>
