--- a/Pages/gratuityIndex.html
+++ b/Pages/gratuityIndex.html
@@ -389,7 +389,7 @@
       </div>
     </section>
     <footer>
-      <p>Footer Content</p>
+      <!-- <p>Footer Content</p> -->
     </footer>
 
     <script src="../assets/gratuityScript.js"></script>
