--- a/Pages/homeEMIindex.html
+++ b/Pages/homeEMIindex.html
@@ -453,7 +453,7 @@
       </div>
     </section>
     <footer>
-      <p>Footer Content</p>
+      <!-- <p>Footer Content</p> -->
     </footer>
     <script src="../assets/homeEMIScript.js"></script>
   </body>
